# components/types.ts
@@ -1,11 +1,11 @@
 export type ContentsStatus = 'Watching' | 'On-hold' | 'Plan to watch' | 'Dropped' | 'Completed'
 export type ContentsRating = 'SS' | 'S' | 'A' | 'B' | 'C' | '未評価' | null
 export type AiringStatus = 'Upcoming' | 'Airing' | 'Finished Airing'
+export type PrivateStatus = '0' | '1'
 
 export interface Contents {
     id: number;
     title: string;
-    duration: string;
     episodes: number;
     currentEpisode: number;
     image: string;
@@ -14,4 +14,5 @@ export interface Contents {
     updateDay: string;
     streamingUrl: string;
     status: ContentsStatus;
+    is_private: PrivateStatus;
 }
